tests/typecheck/should_fail/VisFlag1.stderr

VisFlag1.hs:12:16: error: [GHC-83865]
    • Expecting one more argument to ‘V’
      Expected kind ‘forall j. j -> *’,
        but ‘V’ has kind ‘forall k -> k -> *’
    • In the type ‘V’
      In the expression: f @V MkV
      In an equation for ‘bad_tyapp’: bad_tyapp = f @V MkV

VisFlag1.hs:15:15: error: [GHC-91028]
    • Expected kind ‘forall j. j -> *’, but ‘_’ has kind ‘k0’
      Cannot instantiate unification variable ‘k0’
      with a kind involving polytypes: forall j. j -> *
    • In the expression: f @_ MkV
      In an equation for ‘bad_wild’: bad_wild = f @_ MkV

VisFlag1.hs:18:15: error: [GHC-18872]
    • Couldn't match kind: forall k -> k -> *
                     with: forall j. j -> *
      When matching types
        hk0 :: forall j. j -> *
        V :: forall k -> k -> *
      Expected: hk0 a0
        Actual: V k1 a0
    • In the first argument of ‘f’, namely ‘MkV’
      In the expression: f MkV
      In an equation for ‘bad_infer’: bad_infer = f MkV
